--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,15 @@ dependencies {
     implementation libs.ui.graphics
     implementation libs.ui.tooling.preview
     implementation libs.material3
+
+    //retrofit and moshi
+    implementation libs.retrofit
+    implementation libs.moshi
+
+    //animations
+
+    //navigation
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.test.ext.junit
     androidTestImplementation libs.espresso.core
