--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.com.android.application)
     alias(libs.plugins.org.jetbrains.kotlin.android)
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -60,6 +61,7 @@ dependencies {
     //retrofit and moshi
     implementation libs.retrofit
     implementation libs.moshi
+    implementation libs.converter.moshi
 
     //animations
 
